Fix squashed badge when there is space lacking

--- a/app/styles/atoms/badge.less
+++ b/app/styles/atoms/badge.less
@@ -81,11 +81,13 @@
   }
 
   &--size-sm {
+    min-width: 24px;
     width: 24px;
     height: 24px;
   }
 
   &--size-md {
+    min-width: 36px;
     width: 36px;
     height: 36px;
 
@@ -95,6 +97,7 @@
   }
 
   &--size-lg {
+    min-width: 48px;
     width: 48px;
     height: 48px;
 
